# Practical-Statistics-for-Data-Scientists

./: .gitignore  environment.yml  pyproject.toml
data/: airline_stats.parquet  click_rates.csv  dfw_airline.csv  four_sessions.csv  full_train_set.parquet  house_sales.csv  house_sales.parquet  house_tasks.csv  imanishi_data.csv  kc_tax.parquet  lc_loans.parquet  loan200.csv  loan3000.csv  loan_data.parquet  lung_disease.csv  state.csv  web_page_data.csv
python/notebooks/: Chapter 1 - Exploratory Data Analysis.ipynb  Chapter 2 - Data and sampling distributions.ipynb  Chapter 3 - Statistical Experiments and Significance Testing.ipynb  Chapter 4 - Regression and Prediction.ipynb  Chapter 5 - Classification.ipynb  common.py
