[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "practical-statistics-for-data-scientists"
version = "0.0.1"
license = { file = "LICENSE" }
dependencies = [
    "dmba@git+https://github.com/polars-stats/dmba@polars",
    "jax[cpu]",
    "matplotlib",
    "numpy",
    "polars",
    "prince@git+https://github.com/polars-stats/prince@polars",
    "pygam",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "wquantiles@git+https://github.com/polars-stats/wquantiles@polars",
    "pydotplus",
    "imblearn",
    "xgboost",
    "adjustText"
]

[tool.setuptools.packages.find]
where = ["python"]
