[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "practical-statistics-for-data-scientists"
version = "0.0.1"
license = { file = "LICENSE" }
maintainers = [
    { email = "rnarkkx@gmail.com" }
]
dependencies = [
    "dmba@git+https://github.com/polars-stats/dmba",
    "jax[cpu]",
    "matplotlib",
    "numpy",
    "polars",
    "prince@git+https://github.com/polars-stats/prince@polars",
    "pygam",
    "scikit-learn@git+https://github.com/polars-stats/scikit-learn@polars",
    "scipy",
    "seaborn",
    "statsmodels@git+https://github.com/polars-stats/statsmodels@polars",
    "wquantiles@git+https://github.com/polars-stats/wquantiles@polars",
    "pydotplus",
    "imblearn",
    "xgboost",
    "adjustText"
]

[tool.setuptools.packages.find]
where = ["python"]
